Delete artist by id  js working

--- a/MusicTrackerREST/src/main/resources/static/index.html
+++ b/MusicTrackerREST/src/main/resources/static/index.html
@@ -13,6 +13,7 @@
 	<form name="artistForm">
 		<input type="number" name="artistId">
 		<button name="lookup">Get Artist by Id</button>
+		<!-- <button name="deleteArtist">Delete Artist</button> -->
 	</form>
 
 	<div id="output">
