CRUD complete js

--- a/MusicTrackerREST/src/main/resources/static/index.html
+++ b/MusicTrackerREST/src/main/resources/static/index.html
@@ -9,6 +9,8 @@
 <body>
 
 	<h1>Welcome To The Artist Academy</h1>
+	
+	<div id="artistList"></div><br><hr>
 
 	<form name="artistForm">
 		<input type="number" name="artistId">
@@ -18,6 +20,7 @@
 
 	<div id="output">
 		<div id="artistData"></div>
+		<div id ="update"></div>
 	</div>
 
 	<div>
@@ -35,13 +38,34 @@
 			<label for="Singles">Singles:</label><input type="number" name="songs"><br> 
 			<label for="Albums">Albums:</label><input type="number" name="albums"><br> 
 			<label for="Members">Members:</label><input type="number" name="members"><br>
-			<button name="addArist">Add Artist</button>
+			<button name="addArtist">Add Artist</button>
 
 		</form>
 	</div>
+	
+	<!-- <div>
+		<hr>
+		<form name="updateArtistForm">
+			<h3>Update Artist</h3>
+			
+			<label for="Id">Id:</label><input type="text" name="id"><br>
+			<label for="Name">Name:</label><input type="text" name="name"><br>
+			<label for="Genre">Genre:</label><input type="text" name="genre"><br>
+			<label for="Label">Label:</label><input type="text" name="label"><br>
+			<label for="Origin">Origin:</label><input type="text" name="origin"><br>
+			<label for="MostPlayed">Most Played:</label><input type="text"name="mostPlayed"><br>
+			<label for="LeadArtist">Lead Artist:</label><input type="text" name="leadArtist"><br> 
+			<label for="YearsActive">Years Active:</label><input type="number" name="yearsActive"><br> 
+			<label for="Singles">Singles:</label><input type="number" name="songs"><br> 
+			<label for="Albums">Albums:</label><input type="number" name="albums"><br> 
+			<label for="Members">Members:</label><input type="number" name="members"><br>
+			<button name="updateArtist">Update Artist</button>
 
+		</form>
+	</div>
+ -->
 
-	<div id="artistList"></div>
+	
 
 </body>
 </html>
