--- a/MusicTrackerREST/src/main/resources/static/index.html
+++ b/MusicTrackerREST/src/main/resources/static/index.html
@@ -28,9 +28,9 @@
 			<thead class="table-light">
 				<tr>
 					<th>Id</th>
-					<th>Name</th>
-					<th>Label</th>
-					<th>Genre</th>
+					<th id="name">Name</th>
+					<th id="label">Label</th>
+					<th id="genre">Genre</th>
 					
 				</tr>
 			</thead>
